Updates on routes, hovers and bug

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <!--  Menu -->
-        
         <aside>
             <h2>MENU</h2>
             <ul id="menu">
@@ -45,7 +44,6 @@
         </aside>
         <!--  Content Wrapper -->
         <div class="wrapper relative">
-            
             <!-- Header -->
             <header>
                 <a href="javascript:void(0)" id="menu-button">
@@ -55,7 +53,7 @@
                 <audio id="player" src="assets/mp3/song.mp3"></audio>
                 <div>
                     <button class="active" id="play" >
-                        <img src="assets/icons/audio.svg" alt="audio" />
+                        <img src="assets/icons/social/audio.svg" alt="audio" />
                     </button>
                     <button id="pause">Pause</button>
                 </div>
