--- a/portfolio/main.html
+++ b/portfolio/main.html
@@ -6,8 +6,10 @@
             <h2>Oscar Castañeda</h2>
             <h6>Portfolio</h6>
         </div>            
-    </div>  
-    
+    </div>    
+    <!--<div class="arrow-wrapper">
+        <div class="arrow"></div>
+    </div>-->
     <div class="animation-wrapper">
         <canvas id="canvas"></canvas>
         <canvas id="trails"></canvas>
@@ -133,9 +135,4 @@
         </div>
     </div>
 </section>
-<!--
-<div class="arrow">
-    <a href="#about" id="next-arrow"><img src="assets/icons/arrow.svg" alt="arrow"/></a>
-</div>
--->
-<script type="text/javascript" src="scripts/form.js"></script>
+<script type="text/javascript" src="../scripts/form.js"></script>
