--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             <!-- Dynamic APP begins -->      
             <div id="app">   
             </div>    
+            <div class="animation-wrapper">
+                <canvas id="canvas"></canvas>
+                <canvas id="trails"></canvas>
+            </div>
             <!-- Footer -->
             <footer>
                 <ul class="social-media">
