--- a/portfolio/eala.html
+++ b/portfolio/eala.html
@@ -15,7 +15,8 @@
                     <li>GIT managment</li>
                     <li>Responsive techniques</li>
                     <li>HTML/CSS/jQuery</li>
-                    <li><a href="eala/index.html" target="_blank">View Site</a></li>
+                    <li><a href=floatR"eala/index.html" target="_blank">View Site</a></li>
+
                     <li><a href="https://github.com/oscar-d-rodriguez/EALA" target="_blank">
                         View codebase</a></li>
                 </ul>  
@@ -29,5 +30,6 @@
             <img src="assets/images/eala/3.jpg" alt="eala" class="responsive mb-xl">
             <img src="assets/images/eala/4.jpg" alt="eala" class="responsive mb-xl">
         </div>
+        <a class="floatR button" href="#/vitafusion" > Next Project </a>
     </div>
 </div>
