--- a/portfolio/hosanna.html
+++ b/portfolio/hosanna.html
@@ -27,5 +27,6 @@
             <img src="assets/images/hosanna/3.jpg" alt="hosanna" class="responsive mb-xl">
             <img src="assets/images/hosanna/4.jpg" alt="hosanna" class="responsive mb-xl">
         </div>
+        <a class="floatR button" href="#/imco" > Next Project </a>
     </div>
 </div>
