--- a/portfolio/ui-design.html
+++ b/portfolio/ui-design.html
@@ -27,5 +27,6 @@
             <img src="assets/images/ui/4.jpg" alt="ui" class="responsive mb-xl">
             <img src="assets/images/ui/5.jpg" alt="ui" class="responsive mb-xl">
         </div>
+        <a class="floatR button" href="#/eala" > Next Project </a>
     </div>
 </div>
