--- a/portfolio/vitafusion.html
+++ b/portfolio/vitafusion.html
@@ -27,5 +27,6 @@
             <img src="assets/images/vitafusion/3.jpg" alt="vitafusion" class="responsive mb-xl">
             <img src="assets/images/vitafusion/4.jpg" alt="vitafusion" class="responsive mb-xl">
         </div>
+        <a class="floatR button" href="#/hosanna" > Next Project </a>
     </div>
 </div>
