Work section upgrade

--- a/portfolio/eala.html
+++ b/portfolio/eala.html
@@ -15,8 +15,7 @@
                     <li>GIT managment</li>
                     <li>Responsive techniques</li>
                     <li>HTML/CSS/jQuery</li>
-                    <li><a href=floatR"eala/index.html" target="_blank">View Site</a></li>
-
+                    <li><a href="eala/index.html" target="_blank">View Site</a></li>
                     <li><a href="https://github.com/oscar-d-rodriguez/EALA" target="_blank">
                         View codebase</a></li>
                 </ul>  
