--- a/portfolio/main.html
+++ b/portfolio/main.html
@@ -21,7 +21,7 @@
             <p> Hi there! I’m Oscar Castañeda and I just feel passion about improving user experience through right 
                 and modern responsive front-end web development, I have more than +6 years of experience on the field. 
                 For me the goal is to work with the latest cutting edge technology, taking the product from the initial 
-                idea and design to building and delivering the final product.
+                idea and design to building and delivering the final product, I consider myself as a UX/UI Designer with Front-End Skills. 
             </p>    
             <p>
                 For the last 3 years I have been leading teams from 2 to 7 developers, getting client requirements and
@@ -41,59 +41,76 @@
 </section>
 <!-- Work Section -->
 <section id="work">
-    <div class="eleven columns  offset-by-one">  
-        <div class="four columns">
-            <h1>MY WORK</h1>
-            <p class="mb-xl">Do what you love, you'll never work a day in your life. </p>
-        </div>
-        <div class="seven columns">
-            <div class="row">
-                <div class="three columns">
-                    <a href="#/eala" class="item">
+    <div class="twelve columns">  
+           
+        <h1>MY WORK</h1>
+        <p class="mb-xl">Do what you love, you'll never work a day in your life. </p>
+    
+        <div class="row">
+            <div class="four columns">
+                <div class="item">
+                    <a href="#/eala">
                         <img src="assets/images/figures/1.jpg" alt="eala">
                         <h3>EALA</h3>
                     </a>
-                </div>
-                <div class="three columns">
-                    <a href="#/vitafusion" class="item">
+                </div>    
+            </div>
+            <div class="four columns">
+                <div class="item">   
+                    <a href="#/vitafusion">
                         <img src="assets/images/figures/2.jpg" alt="vitafusion">
                         <h3>Vitafusion</h3>
                     </a>
-                </div>
-                <div class="three columns">
-                    <a href="#/hosanna" class="item">
+                </div>    
+            </div>
+            <div class="four columns">
+                <div class="item">   
+                    <a href="#/hosanna">
                         <img src="assets/images/figures/3.jpg" alt="hosanna">
                         <h3>Hosanna</h3>
                     </a>
-                </div>
-                <div class="three columns">
-                    <a href="#/imco" class="item">
+                </div>    
+            </div>
+        </div> 
+        <div class="row">
+            <div class="four columns">
+                <div class="item">
+                    <a href="#/imco">
                         <img src="assets/images/figures/4.jpg" alt="hosanna">
                         <h3>IMCO</h3>
                     </a>
                 </div>
-            </div> 
-            <div class="row">
-                <div class="three columns">
-                    <a href="#/intercargo" class="item">
+            </div>
+            <div class="four columns">
+                <div class="item">
+                    <a href="#/intercargo">
                         <img src="assets/images/figures/5.jpg" alt="rocket">
                         <h3>Intercargo</h3>
                     </a>
-                </div>
-                <div class="three columns">
-                    <a href="#/orajel" class="item" >
+                </div>    
+            </div>
+            <div class="four columns">
+                <div class="item">
+                    <a href="#/orajel" >
                         <img src="assets/images/figures/6.jpg" alt="roca">
                         <h3>Orajel</h3>
                     </a>
+                </div>    
+            </div>
+        </div>     
+        <div class="row">
+            <div class="twelve columns">
+                <div class="four columns">
+                    <div class="item">
+                        <a href="#/ui-design">
+                            <img src="assets/images/figures/7.jpg" alt="rock-band">
+                            <h3>UI Design</h3>
+                        </a>
+                    </div>
                 </div>
-                <div class="three columns">
-                    <a href="#/ui-design" class="item">
-                        <img src="assets/images/figures/7.jpg" alt="rock-band">
-                        <h3>UI Design</h3>
-                    </a>
-                </div>                    
-            </div>        
-        </div>
+            </div>
+        </div>   
+ 
     </div>
 </section>
 <!--  Contact Section -->
