Add github project and mobile links fix

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="aside-footer">
+                <a href="https://github.com/oscar-d-rodriguez/portfolio" class="github" target="_blank">
+                    <img src="assets/icons/github.png" alt="github project" />
+                </a>
                 <a href="OscarCastanedaResume.docx" class="button mb-lg">
                     Download CV
                 </a>
