--- a/portfolio/main.html
+++ b/portfolio/main.html
@@ -11,12 +11,12 @@
 <!-- About Section -->
 <section id="about">
     <div class="eleven columns">
-        <div class="five columns">
+        <div class="four columns">
             <div class="relative">
                 <img src="assets/images/self-photo.png" alt="oscar" class="responsive" />
             </div>
         </div>
-        <div class="seven columns">
+        <div class="eight columns mb-xl">
             <h1>ABOUT ME</h1>
             <p> Hi there! I’m Oscar Castañeda and I just feel passion about improving user experience through right 
                 and modern responsive front-end web development, I have more than +6 years of experience on the field. 
@@ -29,10 +29,35 @@
                 Kellogs, Avanade, Heineken, Exxon Mobil, Church &amp; Dwight, EALA, Microsoft Corporation, T-Mobile and Cargill
             </p>
             <p>
-                <a href="OscarCastanedaResume.docx" class="button mb-lg">
-                    Download CV
-                </a>
+                My contributions from the last 3 years are restricted confidential,
+                here is a list with the latest concepts worked upon within an Agile environment:
             </p>
+            <div class="row">
+                <div class="columns four">
+                    <ul>    
+                        <li>Angular 1 & 2+</li>
+                        <li>OOP</li>
+                        <li>TypeScript</li>
+                    </ul>    
+                </div> 
+                <div class="columns four">
+                    <ul>    
+                        <li>API services</li>
+                        <li>MVC paradigm</li>
+                        <li>SPA patterns</li>
+                    </ul>
+                </div>
+                <div class="columns four">
+                    <ul>    
+                        <li>SASS / LESS</li>
+                        <li>React & JSX</li>
+                        <li>GIT</li>
+                    </ul>
+                </div> 
+            </div>
+            <a href="OscarCastanedaResume.docx" class="button mb-xl">
+                Download CV
+            </a>
         </div>
         <div class="flower-wrapper">
             <img src="assets/icons/flower-of-life.svg" class="flower">
